<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">爱美语云端</string>
    <string name="domain">https://m.mosaandnasa.com.cn</string>
    <string name="inLogin">进入系统</string>
    <string name="title">爱美语云端系统</string>
    <string name="Account">请输入帐号</string>
    <string name="Password">请输入密码</string>
    <string name="Login">登入</string>
    <string name="save">纪录帐密</string>
    <string name="remind">提醒</string>
    <string name="is_it_logged_out">是否登出？</string>
    <string name="back">返回</string>
    <string name="determine">确定</string>
    <string name="device_not_support_file">行动装置上无法使用此类型档案</string>
</resources>
