<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.mosaandnasa.com.mosaandnasacn.view.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline25" />

        <EditText
            android:id="@+id/etA"
            android:layout_width="0dp"
            android:layout_height="45sp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/common_edit_bg_corner3dp"
            android:ems="10"
            android:hint="@string/Account"
            android:inputType="textPersonName"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline45" />

        <EditText
            android:id="@+id/etP"
            android:layout_width="0dp"
            android:layout_height="45sp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/common_edit_bg_corner3dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etA" />

        <Button
            android:id="@+id/ivLogin"
            android:layout_width="215dp"
            android:layout_height="45sp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn"
            android:ems="10"
            android:onClick="mLogin"
            android:text="@string/Login"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etP" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.28" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.38" />

        <Switch
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="@+id/ivLogin"
            app:layout_constraintTop_toBottomOf="@+id/ivLogin" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
